dev.yaml
kind: Service
apiVersion: v1
metadata:
  name: dev-dgraph
spec:
  type: NodePort
  selector:
    app: dgraph
  ports:
  - protocol: TCP
    port: 9080
    name: dev-dgraph-http
  - protocol: TCP
    port: 8080
    name: dev-dgraph-grpc
---
kind: Service
apiVersion: v1
metadata:
  name: dev-redis
spec:
  type: NodePort
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    name: dev-redis
