dgraph.yaml
kind: Service
apiVersion: v1
metadata:
  name: dgraph
spec:
  selector:
    app: dgraph
  ports:
  - name: dgraph
    protocol: TCP
    port: 9080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dgraph
  labels:
    app: dgraph
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dgraph
  template:
    metadata:
      name: dgraph
      labels:
        app: dgraph # it shares service with dgraph server
    spec:
      containers:
      - name: zero
        image: dgraph/dgraph:latest
        volumeMounts:
        - mountPath: /dgraph
          name: volume
        command: ["dgraph"]
        args: ["zero", "--my=localhost:5080"]
      - name: server
        image: dgraph/dgraph:latest
        volumeMounts:
        - mountPath: /dgraph
          name: volume
        command: ["dgraph"]
        args: ["alpha", "--my=localhost:7080", "--zero=localhost:5080", "--lru_mb=1024"]
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: dgraph
