imgproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgproxy
  labels:
    app: imgproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imgproxy
  template:
    metadata:
      name: imgproxy
      labels:
        app: imgproxy
    spec:
      containers:
      - name: imgproxy
        image: darthsim/imgproxy:latest
---
kind: Service
apiVersion: v1
metadata:
  name: imgproxy
spec:
  # type: NodePort
  selector:
    app: imgproxy
  ports:
  - protocol: TCP
    port: 8080
    # nodePort: 30004
