matcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matcher
  labels:
    app: matcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matcher
  template:
    metadata:
      name: matcher
      labels:
        app: matcher
    spec:
      containers:
      - name: matcher
        ports:
        - containerPort: 50030
        image: ingun37/mdfinder:latest
        command: ["/root/matcher"]
---
kind: Service
apiVersion: v1
metadata:
  name: matcher
spec:
  # type: NodePort
  selector:
    app: matcher
  ports:
  - protocol: TCP
    port: 50030
    # nodePort: 30000
    name: grpc
