server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: server
      labels:
        app: server
    spec:
      containers:
      - name: server
        ports:
        - containerPort: 50030
        image: ingun37/mdfinder:latest
        command: ["/root/server"]
---
kind: Service
apiVersion: v1
metadata:
  name: server
spec:
  # type: NodePort
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 50030
    # nodePort: 30001
    name: grpc
