web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ingun37/mdfinder-web:latest
---
kind: Service
apiVersion: v1
metadata:
  name: web
spec:
  # type: NodePort
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    # nodePort: 30003
