ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dev.mdfinder.club
    secretName: https
  rules:
  - host: dev.mdfinder.club
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
      - path: /ratel
        backend:
          serviceName: ratel
          servicePort: 8000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/grpc-services: "matcher"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: grpc
  namespace: default
spec:
  rules:
  - host: dev3.mdfinder.club
    http:
      paths:
      - path: /
        backend:
          serviceName: matcher
          servicePort: 50030
  tls:
  - secretName: grpc
    hosts:
      - dev3.mdfinder.club
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/grpc-services: "server"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: grpc-server
  namespace: default
spec:
  rules:
  - host: dev2.mdfinder.club
    http:
      paths:
      - path: /
        backend:
          serviceName: server
          servicePort: 50030
  tls:
  - secretName: grpc
    hosts:
      - dev2.mdfinder.club
